// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContrastChecker should render component when the colors do not meet AA WCAG guidelines. 1`] = `
<div
  className="blocks-contrast-checker"
>
  <Notice
    content="This color combination may be hard for people to read. Try using a brighter background color and/or a darker text color."
    isDismissible={false}
    status="warning"
  />
</div>
`;

exports[`ContrastChecker should render different message matching snapshot when background color has less brightness than text color. 1`] = `
<div
  className="blocks-contrast-checker"
>
  <Notice
    content="This color combination may be hard for people to read. Try using a darker background color and/or a brighter text color."
    isDismissible={false}
    status="warning"
  />
</div>
`;

exports[`ContrastChecker should render messages when the textColor is valid, but the fallback backgroundColor conflicts. 1`] = `
<div
  className="blocks-contrast-checker"
>
  <Notice
    content="This color combination may be hard for people to read. Try using a brighter background color and/or a darker text color."
    isDismissible={false}
    status="warning"
  />
</div>
`;
